--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -44,6 +44,18 @@
      <height>29</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuEdit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="explorerWidget">
@@ -56,32 +68,22 @@
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QTreeView" name="explorerView"/>
+      <widget class="ExplorerView" name="explorerView"/>
      </item>
     </layout>
    </widget>
   </widget>
-  <action name="actionDelete">
-   <property name="icon">
-    <iconset>
-     <normaloff>assets/icons/editor/delete.png</normaloff>assets/icons/editor/delete.png</iconset>
-   </property>
-   <property name="text">
-    <string>Delete</string>
-   </property>
-   <property name="toolTip">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Deletes a selected object&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-   <property name="shortcut">
-    <string>Del</string>
-   </property>
-  </action>
  </widget>
  <customwidgets>
   <customwidget>
    <class>MainGLWidget</class>
    <extends>QOpenGLWidget</extends>
    <header>mainglwidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ExplorerView</class>
+   <extends>QTreeView</extends>
+   <header>panes/explorerview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
