--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -66,9 +66,24 @@
     <number>2</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="ExplorerView" name="explorerView"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="propertiesWidget">
+   <property name="windowTitle">
+    <string>Properties</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="PropertiesView" name="propertiesView"/>
      </item>
     </layout>
    </widget>
@@ -84,6 +99,11 @@
    <class>ExplorerView</class>
    <extends>QTreeView</extends>
    <header>panes/explorerview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>PropertiesView</class>
+   <extends>QTreeView</extends>
+   <header>panes/propertiesview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
