--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -88,6 +88,159 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QToolBar" name="toolBar">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+   <addaction name="separator"/>
+   <addaction name="actionAddPart"/>
+   <addaction name="separator"/>
+   <addaction name="actionToolSelect"/>
+   <addaction name="actionToolMove"/>
+   <addaction name="actionToolScale"/>
+   <addaction name="actionToolRotate"/>
+  </widget>
+  <action name="actionAddPart">
+   <property name="icon">
+    <iconset>
+     <normaloff>assets/icons/part.png</normaloff>assets/icons/part.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add Part</string>
+   </property>
+   <property name="toolTip">
+    <string>Add a part to the workspace</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="icon">
+    <iconset>
+     <normaloff>assets/icons/editor/new.png</normaloff>assets/icons/editor/new.png</iconset>
+   </property>
+   <property name="text">
+    <string>New</string>
+   </property>
+   <property name="toolTip">
+    <string>New document</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionOpen">
+   <property name="icon">
+    <iconset>
+     <normaloff>assets/icons/editor/open.png</normaloff>assets/icons/editor/open.png</iconset>
+   </property>
+   <property name="text">
+    <string>Open</string>
+   </property>
+   <property name="toolTip">
+    <string>Open document</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="icon">
+    <iconset>
+     <normaloff>assets/icons/editor/save.png</normaloff>assets/icons/editor/save.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="toolTip">
+    <string>Save document</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionToolSelect">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="edit-select">
+     <normaloff>assets/icons/editor/drag.png</normaloff>assets/icons/editor/drag.png</iconset>
+   </property>
+   <property name="text">
+    <string>Select Objects</string>
+   </property>
+   <property name="toolTip">
+    <string>Select objects in the workspace</string>
+   </property>
+   <property name="shortcut">
+    <string>1</string>
+   </property>
+  </action>
+  <action name="actionToolMove">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="transform-move"/>
+   </property>
+   <property name="text">
+    <string>Move Objects</string>
+   </property>
+   <property name="toolTip">
+    <string>Move objects in the workspace</string>
+   </property>
+   <property name="shortcut">
+    <string>2</string>
+   </property>
+  </action>
+  <action name="actionToolScale">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="transform-scale"/>
+   </property>
+   <property name="text">
+    <string>Scale Objects</string>
+   </property>
+   <property name="toolTip">
+    <string>Scale objects in the workspace</string>
+   </property>
+   <property name="shortcut">
+    <string>3</string>
+   </property>
+  </action>
+  <action name="actionToolRotate">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="transform-rotate"/>
+   </property>
+   <property name="text">
+    <string>Rotate Objects</string>
+   </property>
+   <property name="toolTip">
+    <string>Rotate objects in the workspace</string>
+   </property>
+   <property name="shortcut">
+    <string>4</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
