--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -145,7 +145,11 @@
    <widget class="QWidget" name="dockWidgetContents_3">
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
-      <widget class="QPlainTextEdit" name="outputTextView"/>
+      <widget class="QPlainTextEdit" name="outputTextView">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
