--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -78,8 +78,15 @@
     <addaction name="actionPasteInto"/>
     <addaction name="actionDelete"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionViewLicense"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="explorerWidget">
@@ -802,6 +809,11 @@
    </property>
    <property name="menuRole">
     <enum>QAction::MenuRole::NoRole</enum>
+   </property>
+  </action>
+  <action name="actionViewLicense">
+   <property name="text">
+    <string>License</string>
    </property>
   </action>
  </widget>
