--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -172,7 +172,7 @@
   </widget>
   <widget class="QToolBar" name="editTools">
    <property name="windowTitle">
-    <string>toolBar_3</string>
+    <string>Edit Tools</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -237,7 +237,7 @@
   </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Sound Controls</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -246,6 +246,17 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionToggleEditSounds"/>
+  </widget>
+  <widget class="QToolBar" name="commandBar">
+   <property name="windowTitle">
+    <string>Command Bar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>BottomToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
   </widget>
   <action name="actionAddPart">
    <property name="icon">
