--- a/editor/aboutdialog.ui
+++ b/editor/aboutdialog.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>582</width>
-    <height>162</height>
+    <height>200</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>582</width>
-    <height>162</height>
+    <height>200</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>582</width>
-    <height>162</height>
+    <height>200</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>110</y>
+     <y>140</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -57,7 +57,7 @@
     <pixmap resource="editor.qrc">:/placeholder-logo.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="titleString">
    <property name="geometry">
     <rect>
      <x>110</x>
@@ -67,7 +67,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Openblocks Engine ALPHA SNAPSHOT</string>
+    <string>Openblocks Engine</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -94,6 +94,32 @@
    </property>
    <property name="text">
     <string>&lt;a href=&quot;/license&quot;&gt;View license...&lt;/a&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>110</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Version:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="versionString">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>110</y>
+     <width>451</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>unknown</string>
    </property>
   </widget>
  </widget>
