--- a/editor/mainwindow.ui
+++ b/editor/mainwindow.ui
@@ -168,6 +168,7 @@
    <addaction name="actionToolMove"/>
    <addaction name="actionToolScale"/>
    <addaction name="actionToolRotate"/>
+   <addaction name="actionToolInteract"/>
    <addaction name="actionToggleSpace"/>
   </widget>
   <widget class="QToolBar" name="editTools">
@@ -378,6 +379,23 @@
    </property>
    <property name="shortcut">
     <string>4</string>
+   </property>
+  </action>
+  <action name="actionToolInteract">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="input-mouse-click-left"/>
+   </property>
+   <property name="text">
+    <string>Interact</string>
+   </property>
+   <property name="toolTip">
+    <string>Interact with clickable objects in the workspace</string>
+   </property>
+   <property name="shortcut">
+    <string>5</string>
    </property>
   </action>
   <action name="actionToggleSimulation">
